[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yuan-nav"
version = "0.1.0"
description = "Vision-Language Navigation Agent with Enhanced Memory System"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "vision-language-navigation",
    "vlm",
    "habitat-sim",
    "robotics",
    "autonomous-navigation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
]

dependencies = [
    "habitat-sim>=0.2.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "bitsandbytes>=0.41.0",
    "qwen-vl-utils>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
gpu = [
    "torch>=2.0.0+cu118",
    "triton>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/YuanNav"
Documentation = "https://github.com/yourusername/YuanNav/blob/main/vln/project/README.md"
Repository = "https://github.com/yourusername/YuanNav"
"Bug Tracker" = "https://github.com/yourusername/YuanNav/issues"

[tool.setuptools]
packages = ["vln"]

[tool.setuptools.package-data]
"vln" = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
